[gd_scene load_steps=16 format=2]

[ext_resource path="res://imagens/Wire Task Blue.png" type="Texture" id=1]
[ext_resource path="res://imagens/Wire Task Red.png" type="Texture" id=2]
[ext_resource path="res://imagens/Wire Task Roxo.png" type="Texture" id=3]
[ext_resource path="res://imagens/Wire Task Amarelo.png" type="Texture" id=4]
[ext_resource path="res://imagens/chrome_PPsdrEZblO.png" type="Texture" id=5]
[ext_resource path="res://game.gd" type="Script" id=6]
[ext_resource path="res://RigidBody2Damarelo.gd" type="Script" id=7]
[ext_resource path="res://RigidBody2Dred.gd" type="Script" id=8]
[ext_resource path="res://RigidBody2D2roxo.gd" type="Script" id=9]
[ext_resource path="res://RigidBody2D3azul.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 367.167, 18.6302 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 75.1304, 18.8726 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 78.204, 19.6787 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 75.6355, 17.5817 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 70.4983, 20.7271 )

[node name="game" type="Node2D"]
scale = Vector2( 0.778646, 0.953765 )
script = ExtResource( 6 )

[node name="ChromePPsdrEZblO" type="Sprite" parent="."]
position = Vector2( 1269, 439 )
scale = Vector2( 1.44655, 1.48224 )
texture = ExtResource( 5 )

[node name="RigidBody2Dred" type="RigidBody2D" parent="." groups=["vermelho"]]
position = Vector2( 884.869, 198.162 )
scale = Vector2( 0.145089, 0.954545 )
input_pickable = true
mode = 3
script = ExtResource( 8 )

[node name="WireTaskRed" type="Sprite" parent="RigidBody2Dred"]
position = Vector2( 3.84955, 0.0379791 )
rotation = -0.00661399
scale = Vector2( 0.73801, 1.21146 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2Dred"]
position = Vector2( 1.14709, 1.29086 )
shape = SubResource( 1 )

[node name="RigidBody2Damarelo" type="RigidBody2D" parent="." groups=["amarelo"]]
position = Vector2( 887.438, 378.5 )
scale = Vector2( 0.150618, 0.774198 )
input_pickable = true
mode = 3
script = ExtResource( 7 )

[node name="WireTaskAmarelo" type="Sprite" parent="RigidBody2Damarelo"]
position = Vector2( 11.9453, 0.47583 )
rotation = -0.00661399
scale = Vector2( 0.73801, 1.21146 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2Damarelo"]
position = Vector2( 0, -1.04843 )
shape = SubResource( 1 )

[node name="RigidBody2D2roxo" type="RigidBody2D" parent="." groups=["roxo"]]
position = Vector2( 896.428, 559.886 )
scale = Vector2( 0.13269, 0.793226 )
input_pickable = true
mode = 3
script = ExtResource( 9 )

[node name="WireTaskRoxo" type="Sprite" parent="RigidBody2D2roxo"]
position = Vector2( -0.0888672, 2.0177 )
rotation = -0.00661399
scale = Vector2( 0.73801, 1.21146 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D2roxo"]
position = Vector2( -0.00012207, 1.0484 )
shape = SubResource( 1 )

[node name="RigidBody2D3azul" type="RigidBody2D" parent="." groups=["azul"]]
position = Vector2( 898.996, 736.03 )
scale = Vector2( 0.163276, 0.987023 )
input_pickable = true
mode = 3
script = ExtResource( 10 )

[node name="WireTaskBlue2" type="Sprite" parent="RigidBody2D3azul"]
position = Vector2( 56.0586, 1.88428 )
rotation = -0.00661399
scale = Vector2( 0.73801, 1.21146 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D3azul"]
position = Vector2( 53.4912, -0.212769 )
shape = SubResource( 1 )

[node name="Labelpontos" type="Label" parent="."]
margin_left = 107.88
margin_top = 25.1634
margin_right = 155.88
margin_bottom = 39.1634
rect_scale = Vector2( 6.61729, 7.47734 )
text = "pontos:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2Dvermelho" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2Dvermelho"]
position = Vector2( 1614.98, 198.162 )
shape = SubResource( 2 )

[node name="Area2D2azul" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2azul"]
position = Vector2( 1610.62, 378.742 )
shape = SubResource( 3 )

[node name="Area2D3amarelo" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3amarelo"]
position = Vector2( 1612.92, 561.177 )
shape = SubResource( 4 )

[node name="Area2D4roxo" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4roxo"]
position = Vector2( 1615.49, 740.467 )
shape = SubResource( 5 )

[node name="WireTaskAmarelo" type="Sprite" parent="."]
visible = false
position = Vector2( 1260.38, 470.912 )
rotation = 0.264525
scale = Vector2( 0.73846, 1.24966 )
texture = ExtResource( 4 )

[node name="WireTaskRed" type="Sprite" parent="."]
visible = false
position = Vector2( 1263.73, 197.115 )
rotation = -0.00661399
scale = Vector2( 0.73801, 1.21146 )
texture = ExtResource( 2 )

[node name="WireTaskRoxo" type="Sprite" parent="."]
visible = false
position = Vector2( 1247.28, 649.231 )
rotation = 0.271274
scale = Vector2( 0.713551, 1.29028 )
texture = ExtResource( 3 )

[node name="WireTaskBlue" type="Sprite" parent="."]
visible = false
position = Vector2( 1259.31, 556 )
rotation = -0.486232
scale = Vector2( 0.805729, 1.17077 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 214.475
margin_top = 419.391
margin_right = 479.475
margin_bottom = 514.391
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="clicked" from="RigidBody2Dred" to="." method="_on_RigidBody2Dred_clicked"]
[connection signal="input_event" from="RigidBody2Dred" to="RigidBody2Dred" method="_on_RigidBody2Dred_input_event"]
[connection signal="clicked" from="RigidBody2Damarelo" to="." method="_on_RigidBody2Damarelo_clicked"]
[connection signal="input_event" from="RigidBody2Damarelo" to="RigidBody2Damarelo" method="_on_RigidBody2Damarelo_input_event"]
[connection signal="clicked" from="RigidBody2D2roxo" to="." method="_on_RigidBody2D2roxo_clicked"]
[connection signal="input_event" from="RigidBody2D2roxo" to="RigidBody2D2roxo" method="_on_RigidBody2D2roxo_input_event"]
[connection signal="clicked" from="RigidBody2D3azul" to="." method="_on_RigidBody2D3azul_clicked"]
[connection signal="input_event" from="RigidBody2D3azul" to="RigidBody2D3azul" method="_on_RigidBody2D3azul_input_event"]
[connection signal="body_entered" from="Area2Dvermelho" to="." method="_on_Area2Dvermelho_body_entered"]
[connection signal="body_entered" from="Area2D2azul" to="." method="_on_Area2D2azul_body_entered"]
[connection signal="body_entered" from="Area2D3amarelo" to="." method="_on_Area2D3amarelo_body_entered"]
[connection signal="body_entered" from="Area2D4roxo" to="." method="_on_Area2D4roxo_body_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
